--- a/index.html
+++ b/index.html
@@ -6,153 +6,141 @@
     <title>proTECHtingUrGenes</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
-</head>
 
-<body>
-    <!--COMMON TEMPLATE-->
+    <body>
+        <!--COMMON TEMPLATE-->
 
-    <div class="container" id="container">
-        <div id="main">
+        <div class="container" id="container">
+            <div id="main">
 
+                <!-- HEADING -->
+                <div class="banner">
+                    <div class=banner-wrapper>
+                        <!-- Wrapper which contain logo+company name     -->
+                        <header>
+                            <div class="header-iner">
+                                <a href="index.html" id="logo">
+                                    <img src="images/logo.jpg" alt="Company_logo" width="5%">
+                                </a>
 
-            <!-- HEADING -->
-            <div class="banner">
-                <div class=banner-wrapper>
-                    <!-- Wrapper which contain logo+company name     -->
-                    <header>
-                        <div class="header-iner">
-                            <a href="index.html" id="logo">
-                                <img src="images/logo.jpg" alt="Company_logo" width="150" height="150">
-                            </a>
-                            <!-- Upper-left part -->
-
-                            <div class="brand">
-                                <!-- Company name -->
-                                <h1>proTECHtingUrGenes</h1>
+                                <div class="brand">
+                                    <!-- Company name -->
+                                    <h1>proTECHtingUrGenes</h1>
+                                </div>
                             </div>
-                            <!-- #add the image of the logo with change color and subtittle -->
+                        </header>
+                    </div>
+                </div>
+
+
+                <!-- NAVIGATION BAR -->
+                <div class="nav-wrapper">
+                    <div class="upp-down-left-side">
+                        <div class="nav-link-wrapper">
+                            <a href="index.html">Home</a>
                         </div>
-                    </header>
-                </div>
-            </div>
 
+                        <div class="nav-link-wrapper">
+                            <a href="about.html">About us</a>
+                        </div>
 
-            <!-- NAVIGATION BAR -->
-            <div class="nav-wrapper">
-                <div class="upp-down-left-side">
-                    <div class="nav-link-wrapper">
-                        <a href="index.html">Home</a>
-                    </div>
+                        <div class="nav-link-wrapper">
+                            <a href="gallery.html">Gallery</a>
+                        </div>
 
-                    <div class="nav-link-wrapper">
-                        <a href="about.html">About us</a>
-                    </div>
+                        <div class="nav-link-wrapper">
+                            <a href="services.html">Services</a>
+                        </div>
 
-                    <div class="nav-link-wrapper">
-                        <a href="services.html">Services</a>
-                    </div>
+                        <div class="nav-link-wrapper">
+                            <a href="servicedetails.html">Services details</a>
+                        </div>
 
-                    <div class="nav-link-wrapper">
-                        <a href="servicedetails.html">Services details</a>
-                    </div>
+                        <div class="nav-link-wrapper">
+                            <a href="contact.html">Contact us</a>
+                        </div>
 
-                    <div class="nav-link-wrapper">
-                        <a href="gallery.html">Gallery</a>
-                    </div>
-
-                    <div class="nav-link-wrapper">
-                        <a href="customer.html">Customer attention</a>
-                    </div>
-
-                    <div class="nav-link-wrapper">
-                        <a href="contact.html">Contact us</a>
-                    </div>
-                    <div class="upp-down-right-side">
-                        <!-- add an image -->
                     </div>
                 </div>
-            </div>
 
-            <!---Breadcrums---->
-            <div class="breadcrumbs">
-                <ul class="breddcrums">
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link--active">Home</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">About us</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">Services</a>
+
+                <!---Breadcrums---->
+                <div class="breadcrumbs">
+                    <ul class="breddcrums">
                         <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link">Services</a>
+                            <a href="" class="breadcrumbs__link--active">Home</a>
                         </li>
-                        <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link">Services details</a>
-                        </li>
-                        <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link">Customer attention</a>
-                        </li>
-                        <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link">Contact us</a>
-                        </li>
-                </ul>
-            </div>
-
-
-
-
-
-
-            <!--Highlights-->
-            <div class="highlights">
-                <div class="icon-wrap">
-                    <h2>Highlights!</h2>
-                    <i class="fas fa-biohazard"></i>
-                    <h3>Your best vault</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque fuga adipisci maiores repudiandae inventore eaque quasi iure. Hic saepe tempore nam ut quis, illo ratione quo dolores sapiente, aliquid harum?</p>
+                    </ul>
                 </div>
-            </div>
-
-            <div class="highlights">
-                <div class="icon-wrap">
-                    <i class="fas fa-industry"></i>
-                    <h3>New office in Europe</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque fuga adipisci maiores repudiandae inventore eaque quasi iure. Hic saepe tempore nam ut quis, illo ratione quo dolores sapiente, aliquid harum?</p>
-                </div>
-            </div>
-
-            <div class="highlights">
-                <div class="icon-wrap">
-                    <i class="fas fa-award"></i>
-                    <h3>Pullitzer 2020</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque fuga adipisci maiores repudiandae inventore eaque quasi iure. Hic saepe tempore nam ut quis, illo ratione quo dolores sapiente, aliquid harum?</p>
-                </div>
-            </div>
 
 
-            <!--SLIDER-->
-            <div class="sliderwraper">
-                <div class="slide-images">
-                    <div class="img-container">
-                        <img src="images/sliderbusiness.jpg">
+                <!--Highlights-->
+                <div class="highlights">
+                    <div class="icon-wrap">
+                        <h2>Highlights!</h2>
+                        <i class="fas fa-biohazard"></i>
+                        <h3>Your best vault</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque fuga adipisci maiores repudiandae inventore eaque quasi iure. Hic saepe tempore nam ut quis, illo ratione quo dolores sapiente, aliquid harum?</p>
                     </div>
-                    <div class="img-container">
-                        <img src="images/sliderservices.jpg">
+                </div>
+
+                <div class="highlights">
+                    <div class="icon-wrap">
+                        <i class="fas fa-industry"></i>
+                        <h3>New office in Europe</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque fuga adipisci maiores repudiandae inventore eaque quasi iure. Hic saepe tempore nam ut quis, illo ratione quo dolores sapiente, aliquid harum?</p>
                     </div>
-                    <div class="img-container">
-                        <img src="images/sliderwork.jpg">
+                </div>
+
+                <div class="highlights">
+                    <div class="icon-wrap">
+                        <i class="fas fa-award"></i>
+                        <h3>Pullitzer 2020</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque fuga adipisci maiores repudiandae inventore eaque quasi iure. Hic saepe tempore nam ut quis, illo ratione quo dolores sapiente, aliquid harum?</p>
+                    </div>
+                </div>
+
+
+                <!--SLIDER-->
+                <div class="sliderwraper">
+                    <div class="slide-images">
+                        <div class="img-container">
+                            <img src="images/sliderbusiness.jpg">
+                        </div>
+                        <div class="img-container">
+                            <img src="images/sliderservices.jpg">
+                        </div>
+                        <div class="img-container">
+                            <img src="images/sliderwork.jpg">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <footer id="footer">
+        <footer id="footer">
+            <div class="footer-info">
+                <h3>pro_TECH_ting_Ur_Genes</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab voluptatum at debitis ut eos!</p>
+                <ul class="socials">
+                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></a>
+                    </li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a>></a>
+                    </li>
+                    <li><a href="#"><i class="fab fa-google-plus-g"></i></a>></a>
+                    </li>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a>></a>
+                    </li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a>></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <p>copyright&copy; 2021 pro_TECH_ting_Ur_Genes designed by YaiGenes</p>
+            </div>
+        </footer>
 
-    </footer>
-
-</body>
+    </body>
 
 </html>
