--- a/services.html
+++ b/services.html
@@ -5,25 +5,30 @@
     <meta charset="utf-8">
     <title>proTECHtingUrGenes</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
 </head>
 
 <body>
     <!--COMMON TEMPLATE-->
+
     <div class="container" id="container">
         <div id="main">
-            <!-- HEADING -->
-            <div class="logo-wrapper">
-                <!-- Sector which contain logo+company name     -->
-                <div class="upp-upp-side">
-                    <!-- Upper-left part -->
-                    <header>
-                        <div class="brand">
-                            <!-- Company name -->
-                            <h1>proTECHtingUrGenes</h1>
-                        </div>
-                        <!-- #add the image of the logo with change color and subtittle -->
 
+            <!-- HEADING -->
+            <div class="banner">
+                <div class=banner-wrapper>
+                    <!-- Wrapper which contain logo+company name     -->
+                    <header>
+                        <div class="header-iner">
+                            <a href="index.html" id="logo">
+                                <img src="images/logo.jpg" alt="Company_logo" width="5%">
+                            </a>
+
+                            <div class="brand">
+                                <!-- Company name -->
+                                <h1>proTECHtingUrGenes</h1>
+                            </div>
+                        </div>
                     </header>
                 </div>
             </div>
@@ -39,46 +44,30 @@
                         <a href="about.html">About us</a>
                     </div>
 
-                    <div class="nav-link-wrapper">
-                        <a href="services.html">Services</a>
-                    </div>
 
                     <div class="nav-link-wrapper">
                         <a href="gallery.html">Gallery</a>
                     </div>
 
                     <div class="nav-link-wrapper">
-                        <a href="customer.html">Customer attention</a>
+                        <a href="services.html">Services</a>
+                    </div>
+
+                    <div class="nav-link-wrapper">
+                        <a href="servicedetails.html">Services details</a>
                     </div>
 
                     <div class="nav-link-wrapper">
                         <a href="contact.html">Contact us</a>
                     </div>
-                    <div class="upp-down-right-side">
-                        <!-- add an image -->
-                    </div>
+
                 </div>
             </div>
             <!---Breadcrums---->
             <div class="breadcrumbs">
                 <ul class="breddcrums">
                     <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">Home</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">About us</a>
-                    </li>
-                    <li class="breadcrumbs__item">
                         <a href="" class="breadcrumbs__link--active">Services</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">Gallery</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">Customer attention</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">Contact us</a>
                     </li>
                 </ul>
             </div>
@@ -99,9 +88,29 @@
 
         </div>
     </div>
-    <footer id="footer">
 
+    <footer id="footer">
+        <div class="footer-info">
+            <h3>pro_TECH_ting_Ur_Genes</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab voluptatum at debitis ut eos!</p>
+            <ul class="socials">
+                <li><a href="#"><i class="fab fa-facebook-square"></i></a></a>
+                </li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a>></a>
+                </li>
+                <li><a href="#"><i class="fab fa-google-plus-g"></i></a>></a>
+                </li>
+                <li><a href="#"><i class="fab fa-youtube"></i></a>></a>
+                </li>
+                <li><a href="#"><i class="fab fa-linkedin-in"></i></a>></a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>copyright&copy; 2021 pro_TECH_ting_Ur_Genes designed by YaiGenes</p>
+        </div>
     </footer>
+
 </body>
 
 </html>
